# pixel

./: README.md  __data.json  editor.html  index.html  rust-toolchain.rs
.github/workflows/: cd.yaml  ci.yaml  coverage.yaml
_app/: version.json
_app/immutable/assets/: 4.47d906e3.css  4.f02037a0.css  VisualSwitch.74af43cf.css  VisualSwitch.baff9e04.css  _page.06e4c5ac.css  _page.5fd3a425.css  _page.9a4d0f0d.css  common_ui_bg.cc12e8b8.wasm  engine_bg.3a44958e.wasm  engine_bg.d9a7134d.wasm
_app/immutable/chunks/: VisualSwitch.58b5dcf2.js  VisualSwitch.5a6a1072.js  VisualSwitch.5ab53740.js  VisualSwitch.63bd9612.js  VisualSwitch.9f8b02bc.js  VisualSwitch.cd1acb1a.js  VisualSwitch.dc9a6b7a.js  index.4b5f902b.js  index.8285138c.js  index.c219bad8.js  layout.1b273b00.js  layout.e37c11d2.js  paths.065d899a.js  paths.2622bd7d.js  paths.5606573f.js  paths.5fc408f8.js  paths.9990bf8f.js  paths.ff934338.js  singletons.166fa7fc.js  singletons.4dbd4ba2.js  singletons.65348ad8.js  singletons.6697b287.js  singletons.6dfb6049.js  singletons.72b806ac.js  singletons.86ac4cdc.js  singletons.d6c85a51.js
_app/immutable/entry/: app.066a4f9a.js  app.2cf417a1.js  app.473a1190.js  app.65744a3a.js  app.88206471.js  app.ab442dc8.js  app.d9063899.js  app.fb779a7e.js  start.01eff73d.js  start.6eada6d5.js  start.86300ed2.js  start.8838ee44.js  start.b8ed5ef0.js  start.bebb11a4.js  start.f72b19c9.js  start.fe33f626.js
_app/immutable/nodes/: 0.2bfa523a.js  0.a18d89e8.js  1.2c597c8c.js  1.35cfedfe.js  1.42ea7b2a.js  1.711aa672.js  1.c4674caa.js  1.c77997e5.js  1.dc801bb1.js  (+17 more)
coverage/: coverage.json  index.html
crates/baum/: Cargo.toml
crates/baum/src/: cursor.rs  lib.rs  node.rs  notation.rs  tree.rs
crates/common/: Cargo.toml
crates/common-ui/: Cargo.toml
crates/common-ui/src/: canvas_display.rs  lib.rs
crates/common/src/: color.rs  lib.rs  position.rs  rectangle.rs  size.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  error.rs  extendable.rs  layer.rs  lib.rs  moment.rs  utils.rs  wasm.rs
crates/engine/src/step/: compound.rs  draw_lines.rs  effect_color_grayscale.rs  effect_noise_gaussian.rs  layer_attributes.rs  layer_create_empty.rs  layer_create_fromdata.rs  layer_create_group.rs  layer_duplicate.rs  layer_flip.rs  layer_merge_down.rs  layer_move.rs  layer_move_relative.rs  layer_remove.rs  mod.rs
crates/imagine/: Cargo.toml
crates/imagine/res/glsl/: alpha.frag  base.vert
crates/imagine/src/: dto.rs  image.rs  lib.rs  processing.rs  serde.rs
crates/imagine/src/blend/: blender.rs  mod.rs  software_blender.rs  webgl_blender.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/baum/: all.html  enum.TreeError.html  fn.tr.html  index.html  sidebar-items.js  struct.Cursor.html  struct.Tree.html
doc/common/: all.html  index.html  sidebar-items.js  struct.Color.html  struct.Position.html  struct.Rectangle.html  struct.Size.html
doc/common_ui/: all.html  index.html  sidebar-items.js  struct.CanvasDisplay.html  struct.Coordinate.html  struct.Position.html  struct.Size.html
doc/engine/: all.html  enum.BlendMode.html  enum.DtoTransformError.html  enum.ImageSource.html  enum.Step.html  fn.generate_blender.html  index.html  sidebar-items.js  struct.Engine.html  struct.EngineError.html  struct.Image.html  struct.ImageDto.html  struct.SoftwareBlender.html  trait.Blender.html
doc/imagine/: all.html  enum.BlendMode.html  enum.DtoTransformError.html  enum.ImageSource.html  fn.generate_blender.html  index.html  sidebar-items.js  struct.Image.html  struct.ImageDto.html  struct.SoftwareBlender.html  trait.Blender.html
frontend/: .npmrc  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.html  color.ts  store.ts  types.ts
frontend/static/: style.css
(+178 files in other folders)
