[package]
name = "common"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
image = { version = "0.24.5", optional = true }

[features]
default = [ "image", "serde", "wasm" ]
serde = [ "dep:serde" ]
wasm = [ "serde", "dep:wasm-bindgen", "dep:serde-wasm-bindgen" ]
image = [ "dep:image" ]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
