[package]
name = "imagine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common", features = ["image"] }

# logging
log = "0.4"

# image processing
image = "0.24.5"
base64 = "0.21.0"
imageproc = "0.23.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# wasm
wasm-bindgen = { version = "0.2.84", optional = true }
js-sys = { version = "0.3.51", optional = true }

[dependencies.web-sys]
version = "0.3.4"
optional = true
features = [
  "Document",
  "Window",
  "Element",
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'ImageBitmap',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WebGlTexture',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  "WebGlUniformLocation",
  'WebGlProgram',
  'WebGlShader',
  'WebGlFramebuffer',
]

[features]
default = []
wasm = [ "dep:wasm-bindgen", "dep:js-sys", "dep:web-sys" ]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
